--- a/lab6/page1.html
+++ b/lab6/page1.html
@@ -10,7 +10,7 @@ border: 1px solid black
 <body>
 <script>
 function fun1() {
-window.open("file:///D:/1study/%D0%BE%D0%B8%D1%82/html-css-js/js/lab1/page2.html", "_blank", "top=100, left=100, width=400, height=500, scrollbars=yes, resizable=yes");
+window.open("/js/lab1/page2.html", "_blank", "top=100, left=100, width=400, height=500, scrollbars=yes, resizable=yes");
 }
 function fun2() {
 window.close();
